[package]
name = "gyroflow-toolbox"
version = "1.1.4"
authors = ["Chris Hocking <chris@latenitefilms.com>", "Adrian <adrian.eddy@gmail.com>"]
edition = "2021"
description = "Connects the Gyroflow Toolbox FxPlug4 API to the Gyroflow Core Rust Engine"

[lib]
crate-type =["cdylib"]

[dependencies]
argh = "*"
serde = "1.0"
serde_json = "1.0"
libc = "0.2"
gyroflow-core = { git = "https://github.com/gyroflow/gyroflow.git", default-features = false, rev = "2b3332d", features = ["bundle-lens-profiles"] }
log = "0.4.17"
oslog = "0.2.0"
lazy_static = "1.4.0"
lru = "0.12"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
once_cell = "1.16.0"
metal = { version = "0.27" }
block2 = "0.2.0"
simplelog = { git = "https://github.com/Drakulix/simplelog.rs.git", rev = "4ef071d" }
log-panics = { version = "2.1", features = ["with-backtrace"]}
