[package]
name = "gyroflow-toolbox"
version = "1.3.2"
authors = ["Chris Hocking <chris@latenitefilms.com>", "Adrian <adrian.eddy@gmail.com>"]
edition = "2024"
description = "Connects the Gyroflow Toolbox FxPlug4 API to the Gyroflow Core Rust Engine"

[lib]
crate-type =["cdylib"]

[dependencies]
argh = "*"
serde = "1.0"
serde_json = "1.0"
libc = "0.2"
half = "2.7"
gyroflow-core = { git = "https://github.com/gyroflow/gyroflow.git", default-features = false, rev = "5bb06ae", features = ["bundle-lens-profiles", "use-opencl", "cache-gyro-metadata"] }
log = "0.4"
oslog = "0.2.0"
lazy_static = "1.5.0"
lru = "0.16"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
once_cell = "1.16.0"
metal = { version = "0.32.0" }
block2 = "0.2.0"
simplelog = { git = "https://github.com/Drakulix/simplelog.rs.git", rev = "4ef071d" }
log-panics = { version = "2.1", features = ["with-backtrace"]}